sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var test=false
  var c=0
  while (!test){
    test=true
    while (c!=getNombreValeurs()){
      if (plusPetit(c,c+1)){
        echange(c,c+1)
        tets=false
      }
    }
  }
}